Get DaCe with stree from branch on GridTools/dace

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -463,7 +463,7 @@ url = 'https://gridtools.github.io/pypi/'
 [tool.uv.sources]
 atlas4py = {index = "test.pypi"}
 dace = [
-  {git = "https://github.com/romanc/dace", branch = "romanc/stree-v2", group = "dace-cartesian"},
+  {git = "https://github.com/GridTools/dace", branch = "romanc/stree-v2", group = "dace-cartesian"},
   {index = "gridtools", group = "dace-next"}
 ]
 
