--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ classifiers = [
 ]
 dependencies = [
   'attrs>=21.3',
+  'array-api-compat>=1.13',
   'black>=25.11',
   'boltons>=20.1',
   'cached-property>=1.5.1',
@@ -374,6 +375,7 @@ combine-as-imports = true
 known-first-party = ['gt4py', '__externals__', '__gtscript__']
 known-third-party = [
   'attr',
+  'array-api-compat',
   'black',
   'boltons',
   'cached_property',
