--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -40,3 +40,24 @@ jobs:
 
       - name: "Run pre-commit"
         uses: pre-commit/action@v3.0.1
+
+  external-typing:
+    needs: [get-python-versions]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: "Run external typing checks"
+        run: |
+          .noxfile.py -s 'test_external_typing-${{ fromJson(needs.get-python-versions.outputs.python-versions) }}'
